shaarli-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: shaarli
spec:
  selector:
    app: shaarli
  ports:
  - protocol: TCP
    port: 80
